Standalone module, lazy load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
 
   <div class="container">
 
+    <div>
+      <button [routerLink]="['']" class="btn">Home</button>
+      <button [routerLink]="['/menu']" class="btn">Menu</button>
+    </div>
+
     <router-outlet></router-outlet>
 
   </div>
