--- a/src/app/menu/position-form/position-form.component.html
+++ b/src/app/menu/position-form/position-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div><button [routerLink]="['/']" class="btn">Home</button>   </div>
+  <div><button [routerLink]="['/menu']" class="btn">Back</button>   </div>
   <input type="text" class="form-control" [(ngModel)]="positionName">
   <input type="text" class="form-control" [(ngModel)]="price">
   <select name="" [(ngModel)]="parentId">
