--- a/src/app/menu/part-form/part-form.component.html
+++ b/src/app/menu/part-form/part-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div><button [routerLink]="['/']" class="btn">Home</button>   </div>
+  <div><button [routerLink]="['/menu']" class="btn">Back</button>   </div>
   <input type="text" class="form-control" [(ngModel)]="partName">
   <select name="" [(ngModel)]="parentId">
     <option *ngFor="let part of parts" [value]="part.id">{{part.name}}</option>
